# tinydog

./: .gitignore  README
tinybm/: Cargo.toml  Makefile
tinybm/board/stm32h7/minimal/: Cargo.toml
tinybm/board/stm32h7/minimal/src/: main.rs
tinybm/board/stm32h7/uart-echo/: Cargo.toml
tinybm/board/stm32h7/uart-echo/src/: main.rs
tinybm/mega/: README.mkdn  build.rs
tinybm/mega/src/: atomic.rs  exec.rs  lib.rs  list.rs  mutex.rs  spsc.rs  time.rs  util.rs
tinybm/utils/handoff/: Cargo.toml  README.mkdn
tinybm/utils/handoff/src/: lib.rs
tinybm/utils/list/: Cargo.toml  README.mkdn
tinybm/utils/list/src/: lib.rs
tinybm/utils/rwlock/: Cargo.toml  README.mkdn
tinybm/utils/rwlock/src/: lib.rs
tinybm/utils/semaphore/: Cargo.toml  README.mkdn
tinybm/utils/semaphore/src/: lib.rs
tinybm/utils/watch/: Cargo.toml  README.mkdn
tinybm/utils/watch/src/: lib.rs
tinycm/: Makefile
tinycm/arch/arm64/: arch.mk  cpu.c  exception.c  gic.S  gicv3.c  head.S  memory.c  offset.c  smp.c  timer.S  tiny.lds.S  vector.S
tinycm/arch/arm64/include/asm/: asm.h  barrier.h  (+6 more)
tinycm/tiny/: console.c  interrupt.c  panic.c  print.c  scheduler.c  spinlock.c  tiny.c  tiny.mk
tinycm/tiny/bsp/: bsp.mk  cpu.c  hal.c  uart.c
tinycm/tiny/bsp/include/: cpu.h  gpio.h  hal.h  pwm.h  rk3566.h  uart.h
tinycm/tiny/include/: compiler.h  console.h  endian.h  interrupt.h  list.h  panic.h  preempt.h  print.h  scheduler.h  time.h  type.h  util.h
tinycs/: Makefile  README
tinycs/arch/arm64/: arch.mk  cache.S  cpu.c  debug.S  exception.c  head.S  tiny.lds.S  vector.S
tinycs/tiny/: console.c  panic.c  print.c  spinlock.c  tiny.c  util.c
tinycs/tiny/bsp/: bsp.c  bsp.mk  cpu.c  hal.c  rk3566.c  uart.c
tinycs/tiny/bsp/include/: bsp.h  cpu.h  hal.h  i2c.h  rk3566.h  spi.h  timer.h  uart.h  wdt.h
tinycs/tiny/include/: compiler.h  console.h  endian.h  list.h  panic.h  print.h  queue.h  rbtree.h  scheduler.h  time.h  type.h  util.h
tinyec/: Makefile  README
tinyec/arch/arm64/: arch.mk  cache.S  cpu.c  debug.S  exception.S  exception.c  head.S  offset.c  tiny.lds.S  vector.S
tinyec/tiny/: console.c  cpu.c  debug.c  print.c  scheduler.c  string.c  tiny.c  tiny.mk  util.c
tinyec/tiny/board/: board.c  board.mk  rk3566.c
tinyec/tiny/board/include/: rk3566.h
tinyec/tiny/driver/: driver.c  driver.mk  serial.c
tinyec/tiny/include/: compiler.h  config.h  console.h  cpu.h  device.h  list.h  print.h  queue.h  scheduler.h  serial.h  string.h  time.h  type.h  util.h
tinyfw/: Cargo.toml  Makefile
tinymd/: .vimrc  dumbdog-armv8  dumbdog-cpu  dumbdog-ebpf  dumbdog-hypervisor  dumbdog-latency  dumbdog-man  dumbdog-memory  dumbdog-rust  dumbdog-trace  dumbdog-vim
tinyog/: Makefile  README
tinyog/arch/arm64/: cache.S  debug.S  exception.c  head.S  tiny.lds.S  vector.S
tinyog/tiny/: console.c  cpu.c  print.c  rbtree.c  tiny.c
tinyog/tiny/board/: board.c
tinyog/tiny/board/include/: board.h  rk3566.h
tinyog/tiny/driver/: driver.mk  hal.c  serial.c
tinyog/tiny/include/: config.h  console.h  hal.h
tinyos/: Cargo.toml  Makefile  README  rust-toolchain.toml
tinyos/cimp/: Makefile  push.sh
tinyos/cimp/arch/arm64/: arch.mk  cache.S  cpu.c  debug.S  exception.c  gicv3.c  head.S  interrupt.c  memory.c  offset.c  psci.c  smccc.S  spinlock.S  tiny.lds.S  trace.c  vector.S
tinyos/cimp/tiny/: console.c  cpu.c  panic.c  print.c  string.c  tiny.c  tiny.mk  util.c
tinyos/cimp/tiny/hal/: hal.c  hal.mk  uart.c
tinyos/cimp/tiny/include/: bit.h  compiler.h  console.h  cpu.h  errno.h  memory.h  panic.h  spinlock.h  type.h  util.h
tinyos/rust/: Makefile
tinyos/rust/tiny/: Cargo.toml  build.rs
tinyos/rust/tiny/src/: list.rs  mutex.rs  rwlock.rs  semaphore.rs  spsc.rs  task.rs  time.rs  util.rs  watch.rs
tinyos/tiny/: Cargo.toml  build.rs
tinyos/tiny/src/: atomic.rs  exec.rs  lib.rs  spsc.rs  util.rs
tinyvm/: Cargo.toml  LICENSE  Makefile  build.rs  rustfmt.toml
tinyvm/.cargo/: config
tinyvm/src/: error.rs  lib.rs  panic.rs
tinyvm/src/arch/: mod.rs  traits.rs
tinyvm/src/arch/aarch64/: cache.S  cache.rs  context_frame.rs  cpu.rs  exception.S  exception.rs  fpsimd.S  gic.rs  gicv3.rs  interface.rs  interrupt.rs  mmu.rs  mod.rs  page_table.rs  psci.rs  regs.rs  smc.rs  smmu.rs  start.rs  sync.rs  timer.rs  tlb.rs  vcpu.rs  vgic.rs  vgicv3.rs  vm.rs
tinyvm/src/arch/riscv64/: aplic.rs  cache.rs  context_frame.rs  cpu.rs  exception.rs  imsic.rs  interface.rs  interrupt.rs  mod.rs  page_fault.rs  page_table.rs  plic.rs  power.rs  regs.rs  sbicall.rs  smmu.rs  start.rs  timer.rs  tlb.rs  vaplic.rs  vcpu.rs  vm.rs  vplic.rs
tinyvm/src/board/: mod.rs  platform_common.rs
tinyvm/src/board/qemu/: mod.rs  platform.rs
tinyvm/src/board/qemu_riscv64/: mod.rs  platform.rs
tinyvm/src/board/rk3588/: mod.rs  platform.rs
tinyvm/src/config/: config.rs  mod.rs  qemu_def.rs  qemu_riscv64_def.rs  rk3588_def.rs  vm_def.rs
tinyvm/src/device/: device.rs  device_tree.rs  emu.rs  memrsv.rs  mod.rs
tinyvm/src/device/meta/: meta.rs  mod.rs  rk_cru.rs
tinyvm/src/device/virtio/: blk.rs  console.rs  dev.rs  iov.rs  mac.rs  mediated.rs  mmio.rs  mod.rs  net.rs  queue.rs
tinyvm/src/driver/: mod.rs
tinyvm/src/driver/gpio/: gpio.rs  mod.rs
tinyvm/src/driver/uart/: mod.rs  ns16550.rs  pl011.rs
tinyvm/src/kernel/: async_task.rs  cpu.rs  hvc.rs  interrupt.rs  iommu.rs  ipi.rs  ivc.rs  logger.rs  mem.rs  mem_region.rs  mod.rs  timer.rs  vcpu.rs  vcpu_array.rs  vm.rs
tinyvm/src/kernel/sched/: mod.rs  sched_rr.rs  sched_rt.rs
tinyvm/src/mm/: heap.rs  mod.rs  page_frame.rs  page_pool.rs
tinyvm/src/utils/: barrier.rs  bitmap.rs  device_ref.rs  downcast.rs  interval.rs  mod.rs  print.rs  string.rs  time.rs  unilib.rs  util.rs
tinyvm/src/vmm/: init.rs  manager.rs  mod.rs  remove.rs
(+43 files in other folders)
