[package]
name = "tinybm-rwlock"
version = "0.2.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
description = "A read-write / writer-preferred lock for use with tinybm."
keywords = ["async", "embedded", "os"]
categories = ["embedded", "no-std"]
readme = "README.mkdn"

edition.workspace = true
license.workspace = true
# repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
tinybm.workspace = true
tinybm-list.workspace = true
pin-project.workspace = true
scopeguard.workspace = true

[lib]
test = false
bench = false
