[package]
name = "tinyos"
version = "1.0.0"
authors = ["Hustler Lo <roxhustlin@gmail.com>"]
description = "A tiny embedded OS based around Futures and async."
keywords = ["async", "embedded", "os"]
categories = ["embedded","no-std"]
readme = "README"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-unknown-none"

[features]
default = ["mutex", "spsc", "systick"]
mutex = []
spsc = []
systick = []

[dependencies]
cfg-if.workspace = true
pin-project.workspace = true

[dependencies.portable-atomic]
version = "1.6.0"
default-features = false
features = [
    "fallback",
    "critical-section",
]

[lib]
test = false
bench = false
