[package]
name = "tinybm-stm32h7-uart"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "UART data exchange example for tinybm on stm32h7."
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
futures.workspace = true
tinybm = {workspace = true, features = ["systick", "spsc"]}
panic-halt.workspace = true
stm32-metapac = { workspace = true, features = ["stm32h743zi"] }

[[bin]]
name = "tinybm-stm32h7-uart"
test = false
bench = false
